fix logo gapping

--- a/less/components/logo.less
+++ b/less/components/logo.less
@@ -2,7 +2,7 @@
 
 .logo {
   font-size: 32px;
-  padding: 10px;
+  padding: 10px @feed-gap;
   color: @white - @accent-color;
 
   span {
